--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                               
                             <a href="about.html#tools" class="link">
                                 <span class="link-img-background">
-                                  <img src="Images/tools.jpg" alt="car" />  
+                                  <img src="Images/tools.jpg" alt="tools" />  
                                 </span>
                                 <span class="link-text">Tools Used</span>
                               </a>
@@ -112,7 +112,7 @@
                               
                             <a href="about.html#strength" class="link">
                                 <span class="link-img-background">
-                                  <img src="Images/Strength.jpg" alt="car" />  
+                                  <img src="Images/Strength.jpg" alt="strength" />  
                                 </span>
                                 <span class="link-text">Strength/Hobbies</span>
                               </a>
