--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="col-sm-8" style="background-color: #F1F4FF">
                         <div class="row">
                             <div class="col-sm-6">
-                                <img src="images/profile1.JPG" class="rounded-circle, center" alt="Profile_image">
+                                <img src="Images/profile1.JPG" class="rounded-circle, center" alt="Profile_image">
                             </div>
                             <div class="col-sm-6">
                                 <p style="padding: 5px;">
@@ -79,18 +79,18 @@
                         <div class="link-boxes">
                             <a href="about.html#academic" class="link">
                               <span class="link-img-background">
-                                <img src="Images/Academic.jpg" alt="car" />  
+                                <img src="Images/Academic.jpg" alt="Academic" />  
                               </span>
                               <span class="link-text">Academic Details</span>
                             </a>
-                              <a href="about.html#Academic" class="link">
+                              <a href="About.html#Academic" class="link">
                               <span class="link-img-background">
                                 <img src="Images/skill.jpg" alt="skill" />  
                               </span>
                               <span class="link-text">Skills</span>
                             </a>
                               
-                            <a href="about.html#tools" class="link">
+                            <a href="About.html#tools" class="link">
                                 <span class="link-img-background">
                                   <img src="Images/tools.jpg" alt="tools" />  
                                 </span>
@@ -103,16 +103,16 @@
                 <div class="row">
                     <div class="col-sm 12" style="padding-bottom: 16px;">
                         <div class="link-boxes">
-                            <a href="about.html#extra" class="link">
+                            <a href="About.html#extra" class="link">
                                 <span class="link-img-background">
                                   <img src="Images/extracurricular.jpg" alt="extracurricular" />  
                                 </span>
                                 <span class="link-text">Extra-curricular</span>
                               </a>
                               
-                            <a href="about.html#strength" class="link">
+                            <a href="About.html#strength" class="link">
                                 <span class="link-img-background">
-                                  <img src="Images/Strength.jpg" alt="strength" />  
+                                  <img src="Images/strength.jpg" alt="strength" />  
                                 </span>
                                 <span class="link-text">Strength/Hobbies</span>
                               </a>
