--- a/Mywork.html
+++ b/Mywork.html
@@ -23,7 +23,7 @@
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="index.html#about">About Me</a></li>
-                            <li><a href="Index.html#mywork">My Work</a></li>
+                            <li><a href="index.html#mywork">My Work</a></li>
                             <li><a href="#contact">Contact Me</a></li>
                         </ul>
 
