--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="col-sm-8" style="background-color: #F1F4FF">
                         <div class="row">
                             <div class="col-sm-6">
-                                <img src="Images/profile1.JPG" class="rounded-circle, center" alt="Profile_image">
+                                <img src="Images/profile.JPG" class="rounded-circle, center" alt="Profile_image">
                             </div>
                             <div class="col-sm-6">
                                 <p style="padding: 5px;">
@@ -77,7 +77,7 @@
                 <div class="row">
                     <div class="col-sm-12" style="padding-bottom: 16px;">
                         <div class="link-boxes">
-                            <a href="about.html#academic" class="link">
+                            <a href="about.html#Academic" class="link">
                               <span class="link-img-background">
                                 <img src="Images/Academic.jpg" alt="Academic" />  
                               </span>
