--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
                 <div class="row">
                     <div class="col-sm-12" style="padding-bottom: 16px;">
                         <div class="link-boxes">
-                            <a href="about.html#Academic" class="link">
+                            <a href="About.html#Academic" class="link">
                               <span class="link-img-background">
                                 <img src="Images/Academic.jpg" alt="Academic" />  
                               </span>
                               <span class="link-text">Academic Details</span>
                             </a>
-                              <a href="About.html#Academic" class="link">
+                              <a href="About.html#Skill" class="link">
                               <span class="link-img-background">
                                 <img src="Images/skill.jpg" alt="skill" />  
                               </span>
