--- a/Mywork.html
+++ b/Mywork.html
@@ -31,7 +31,7 @@
                     <div class="col-sm-8" style="background-color: #F1F4FF">
                         <div class="row">
                             <div class="col-sm-6">
-                                <img src="images/profile1.JPG" class="rounded-circle, center" alt="Profile_image">
+                                <img src="images/profile.JPG" class="rounded-circle, center" alt="Profile_image">
                             </div>
                             <div class="col-sm-6">
                                 <p style="padding: 5px;">
